--- a/OBE.html
+++ b/OBE.html
@@ -169,6 +169,18 @@ a {
 	
 }
 
+#whiteboard{
+  	position: absolute;
+  	top: 50px;
+  	left: 0px;
+    width: 600px;
+  	height: 350px;
+  	background: white;
+  	border: 2px solid gray;
+    border-radius: 10px;
+    box-shadow: 5px 5px 7px rgba(33,33,33,.7);
+
+}
 
 .post-it{
   position: absolute;
@@ -403,7 +415,7 @@ Config.history.controls = false;
           &lt;&lt;/for&gt;&gt;
 		&lt;&lt;/if&gt;&gt;
  &lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="6" name="Menu" tags="menu noFooter" position="225,400" size="100,100">&lt;&lt;run UIBar.unstow()&gt;&gt;
-</tw-passagedata><tw-passagedata pid="7" name="StoryStart_old" tags="" position="825,25" size="100,100">&lt;&lt;set $wakeUpOptions = [&quot;You slept great and wake feeling refreshed.&quot;, 
+&lt;div id=&quot;whiteboard&quot;&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="7" name="StoryStart_old" tags="" position="825,25" size="100,100">&lt;&lt;set $wakeUpOptions = [&quot;You slept great and wake feeling refreshed.&quot;, 
 &quot;You wake feeling rested and ready to face the day.&quot;,
 &quot;You wake feeling tired and groggy.  It&#39;s hard to get out of bed.  You wish you could just go back to bed.&quot;]&gt;&gt;
 
