--- a/OBE.html
+++ b/OBE.html
@@ -119,6 +119,7 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
 
 body {
   font-family: fira;
+  background-image: url('media/background_pattern.png');
   background-color: #99D1D8;
   color: black;
 }
@@ -179,7 +180,11 @@ a {
   	border: 2px solid gray;
     border-radius: 10px;
     box-shadow: 5px 5px 7px rgba(33,33,33,.7);
+}
 
+#to-do_list{
+	position: absolute;
+  	left: 200px;
 }
 
 .post-it{
@@ -415,7 +420,11 @@ Config.history.controls = false;
           &lt;&lt;/for&gt;&gt;
 		&lt;&lt;/if&gt;&gt;
  &lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="6" name="Menu" tags="menu noFooter" position="225,400" size="100,100">&lt;&lt;run UIBar.unstow()&gt;&gt;
-&lt;div id=&quot;whiteboard&quot;&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="7" name="StoryStart_old" tags="" position="825,25" size="100,100">&lt;&lt;set $wakeUpOptions = [&quot;You slept great and wake feeling refreshed.&quot;, 
+&lt;nobr&gt;
+&lt;div id=&quot;whiteboard&quot;&gt;
+&lt;img id=&quot;to-do_list&quot; src=&quot;media\to-do_list.png&quot;&gt;
+&lt;/div&gt;
+&lt;/nobr&gt;</tw-passagedata><tw-passagedata pid="7" name="StoryStart_old" tags="" position="825,25" size="100,100">&lt;&lt;set $wakeUpOptions = [&quot;You slept great and wake feeling refreshed.&quot;, 
 &quot;You wake feeling rested and ready to face the day.&quot;,
 &quot;You wake feeling tired and groggy.  It&#39;s hard to get out of bed.  You wish you could just go back to bed.&quot;]&gt;&gt;
 
