--- a/OBE.html
+++ b/OBE.html
@@ -448,10 +448,12 @@ Hovered:
      - don&#39;t allow clicking off screen 
           
 Story
-      -build out tasks
       -finish memories, add color, italics, etc to fonts to highlight who&#39;s speaking etc
-      -add Events
       -add more burnout options.	
+	  - add more back at it options.     
+      -screen darkens or blurs or some way to show you are starting to burn out
+	-back at it &#39;first person&#39;  so much I want to do
+    to do fix &quot;clean bathroom&quot;
 
 Pre-ship items
 	Remember to update:
@@ -466,6 +468,7 @@ Nice to have:
           - add better clarification text
           - in game direction on which colors post it to click
           - Text at end of game that talks to their score, relates to task quality and how 					well it was completed
+	-format credits
 
 	 -Add node to the task objects so that if you want to force a specific vs random 			next passage you can place it there.  Will need a check to see if its empty and if 			not use the random one
 
@@ -479,7 +482,8 @@ Nice to have:
    -add artwork
    			-background for menu
             -background something
-			</tw-passagedata><tw-passagedata pid="7" name="StoryCaption" tags="" position="25,275" size="100,100">Day $day, $time
+			
+            </tw-passagedata><tw-passagedata pid="7" name="StoryCaption" tags="" position="25,275" size="100,100">Day $day, $time
 Mood = $mood</tw-passagedata><tw-passagedata pid="8" name="StoryMenu" tags="" position="25,400" size="100,100">[[Menu]]
 &lt;&lt;link &quot;Play Color Code&quot;&gt;&gt;&lt;&lt;= colorCode();&gt;&gt;&lt;&lt;/link&gt;&gt;</tw-passagedata><tw-passagedata pid="9" name="StoryCaption" tags="" position="25,275" size="100,100">OVERCOME BY EVENTS</tw-passagedata><tw-passagedata pid="10" name="StoryMenu" tags="" position="25,400" size="100,100">[[Menu]]
 &lt;&lt;link &quot;Back&quot;&gt;&gt;&lt;&lt;run Engine.backward()&gt;&gt;&lt;&lt;/link&gt;&gt;</tw-passagedata><tw-passagedata pid="11" name="Start" tags="" position="450,400" size="100,100">&lt;&lt;nobr&gt;&gt;
