--- a/OBE.html
+++ b/OBE.html
@@ -688,27 +688,7 @@ and a whole host of other things.  &lt;br&gt;Maybe if I
         - Pink: #FFD2BD
         - Purple: #C3BBD2
         Ground color:
-        -blue (for links) #1A547A</tw-passagedata><tw-passagedata pid="24" name="Credits" tags="noFooter" position="275,25" size="100,100">Credits
-
-Overcome by Events
-by Autumn and Luke Barker
-
-Music found on Pixabay:
-Heart of the Dream by JoltEagle https://pixabay.com/users/jolteagle-24675324/
-Distraído by Adriano_Ollyveira https://pixabay.com/users/adriano_ollyveira-41818679/
-
-Fonts:
-
-
-
-
-Images:
-- ChatGPT for titlescreen
-
-
-Code Snippets:
-https://webdesign.tutsplus.com/create-a-sticky-note-effect-in-5-easy-steps-with-css3-and-html5--net-13934t 
-</tw-passagedata><tw-passagedata pid="25" name="post-itWidget" tags="widget" position="150,525" size="100,100">&lt;!-- args: task, next passage, onclick event--&gt;
+        -blue (for links) #1A547A</tw-passagedata><tw-passagedata pid="24" name="Credits" tags="noFooter" position="275,25" size="100,100"></tw-passagedata><tw-passagedata pid="25" name="post-itWidget" tags="widget" position="150,525" size="100,100">&lt;!-- args: task, next passage, onclick event--&gt;
 &lt;&lt;widget &quot;post-it&quot;&gt;&gt;
 &lt;&lt;nobr&gt;&gt;
 &lt;ul&gt;
