--- a/OBE.html
+++ b/OBE.html
@@ -688,7 +688,28 @@ and a whole host of other things.  &lt;br&gt;Maybe if I
         - Pink: #FFD2BD
         - Purple: #C3BBD2
         Ground color:
-        -blue (for links) #1A547A</tw-passagedata><tw-passagedata pid="24" name="Credits" tags="noFooter" position="275,25" size="100,100"></tw-passagedata><tw-passagedata pid="25" name="post-itWidget" tags="widget" position="150,525" size="100,100">&lt;!-- args: task, next passage, onclick event--&gt;
+        -blue (for links) #1A547A</tw-passagedata><tw-passagedata pid="24" name="Credits" tags="noFooter" position="275,25" size="100,100">&lt;span class=&quot;bold&quot;&gt;Credits&lt;/span&gt;
+
+&lt;span class =&quot;italics&quot;&gt;Overcome by Events&lt;/span&gt;
+by Autumn and Luke Barker
+
+Music found on Pixabay:
+Heart of the Dream: by JoltEagle https://pixabay.com/users/jolteagle-24675324/
+Distraído: by Adriano_Ollyveira https://pixabay.com/users/adriano_ollyveira-41818679/
+End Screen - Soundly
+
+Fonts:
+caveat: https://www.fontsquirrel.com/fonts/caveat
+fira-sans:  https://www.fontsquirrel.com/fonts/fira-sans
+
+
+Images:
+ChatGPT for titlescreen
+
+
+Code Snippets:
+https://webdesign.tutsplus.com/create-a-sticky-note-effect-in-5-easy-steps-with-css3-and-html5--net-13934t 
+</tw-passagedata><tw-passagedata pid="25" name="post-itWidget" tags="widget" position="150,525" size="100,100">&lt;!-- args: task, next passage, onclick event--&gt;
 &lt;&lt;widget &quot;post-it&quot;&gt;&gt;
 &lt;&lt;nobr&gt;&gt;
 &lt;ul&gt;
@@ -770,17 +791,16 @@ And in the immortal words of Jimmy Buffett...
      background.appendChild(thanksEl);
      background.appendChild(linkEl);
      linkEl.style.position = &quot;absolute&quot;;
-     linkEl.onclick= function(){UI.restart();};
+     linkEl.onclick= function(){Engine.restart();};
      linkEl.href = &quot;#&quot;;
-     linkEl.textContent=&quot;Restart&quot;;
+     linkEl.textContent=&quot;Return to Menu&quot;;
      thanksEl.textContent = &quot;Thanks for Playing&quot;;
      thanksEl.style.color = &quot;black&quot;;     
      thanksEl.style.position = &quot;absolute&quot;;
      thanksEl.style.zIndex = &#39;1002&#39;;
      linkEl.style.zIndex = &#39;1002&#39;;
-     thanksEl.style.margin = &#39;0px&#39;;
-     linkEl.style.margin = &quot;100px&quot;;
-	  linkEl.style.color = &quot;black&quot;;
+     thanksEl.style.margin = &#39;50px&#39;;
+	linkEl.style.color = &quot;black&quot;;
       thanksEl.style.textAlign = &quot;center&quot;;
       thanksEl.style.display = &quot;none&quot;;
       linkEl.style.display = &quot;none&quot;;
@@ -808,8 +828,9 @@ And in the immortal words of Jimmy Buffett...
 	horn.play();
  	circleEl.removeEventListener(&quot;mouseover&quot;, onHover);
     await new Promise(resolve =&gt; setTimeout(resolve, 7000));
-     thanksEl.style.display = &quot;flex&quot;;
-     linkEl.style.display = &quot;flex&quot;;
+     thanksEl.style.display = &quot;block&quot;;
+     linkEl.style.display = &quot;block&quot;;
+     background.style.textAlign = &quot;center&quot;;
  	}
     
     circleEl.addEventListener(&quot;mouseover&quot;, onHover);
